completion of pages

--- a/src/Style/header.scss
+++ b/src/Style/header.scss
@@ -19,6 +19,8 @@
         nav {
             margin-right: 24px;
             justify-content: center;
+            height: auto;
+            width: 20%;
             a {
                 font-size: 17px;
                 color: rgb(10, 53, 39);
